<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.anima.xd.s.a170802_balancewheel.AddContentActivity"
    android:padding="@dimen/_4dp"
    app:columnCount="3"
    app:rowCount="10"
    app:useDefaultMargins="true">

    <EditText
        android:id="@+id/ed_task_name"
        app:layout_column="0"
        app:layout_columnSpan="3"
        android:inputType="text"
        android:ems="20"
        android:hint="@string/content_task_title"/>

        <TextView
            android:text="@string/content_mission"
            style="@style/MyAppTheme.GridText"/>

        <Spinner
            app:layout_column="2"
            app:layout_columnSpan="2"
            app:layout_row="1"
            android:spinnerMode="dialog"
            app:layout_gravity="fill"
            />

        <CheckBox
            app:layout_column="1"
            app:layout_row="2"
            app:layout_gravity="right"
            android:lines="1"
            android:text="@string/content_date_all_day"/>

        <CheckBox
            app:layout_column="2"
            app:layout_row="2"
            app:layout_gravity="center_horizontal"
            android:text="@string/content_date_lunar_calendar"/>

        <TextView
            android:text="@string/content_date_start"
            style="@style/MyAppTheme.GridText"
            app:layout_row="3"/>

        <TextView
            android:text="@string/content_date_end"
            style="@style/MyAppTheme.GridText"
            app:layout_row="4"/>

        <TextView
            android:text="@string/content_cycle"
            style="@style/MyAppTheme.GridText"
            app:layout_row="5"/>

        <CheckBox
            app:layout_column="2"
            app:layout_row="5"
            android:text="@string/content_no_cycle"/>

        <Spinner
            app:layout_column="1"
            app:layout_row="6"/>

        <TextView
            android:text="@string/content_cycle_date"
            app:layout_column="2"
            app:layout_row="6"
            />

        <TextView
            android:text="@string/content_element"
            style="@style/MyAppTheme.GridText"
            app:layout_row="7"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/view_add_recycler"
            app:layout_column="1"
            app:layout_columnSpan="2"
            app:layout_row="7"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:orientation="horizontal"/>

        <TextView
            android:text="@string/content_alarm"
            style="@style/MyAppTheme.GridText"
            app:layout_row="8"/>

        <CheckBox
            android:text="@string/content_no_alarm"
            android:textSize="@dimen/typo_body"
            app:layout_column="2"
            app:layout_row="8"
            />

        <TextView
            android:id="@+id/txt_cancel"
            android:text="@string/content_btn_cancel"
            android:textSize="@dimen/typo_btn"
            android:clickable="true"
            android:onClick="clickBtn"
            app:layout_column="1"
            app:layout_row="9"/>

        <TextView
            android:id="@+id/txt_ok"
            android:text="@string/content_btn_ok"
            android:textSize="@dimen/typo_btn"
            android:clickable="true"
            android:onClick="clickBtn"
            app:layout_column="2"
            app:layout_row="9"/>

</android.support.v7.widget.GridLayout>
