<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/menu_navi_dashboard"
        android:icon="@drawable/ic_navi_dashboard"
        app:showAsAction="always"/>

    <item android:title="@string/menu_navi_share_list"
        android:icon="@drawable/ic_navi_globe"
        app:showAsAction="always"/>

    <item android:title="@string/menu_navi_add_content"
        android:icon="@drawable/ic_navi_edit"
        app:showAsAction="always"/>

    <item android:title="@string/menu_navi_inventory"
        android:icon="@drawable/ic_navi_inventory"
        app:showAsAction="always"/>

    <item android:title="@string/menu_navi_setting"
        android:icon="@drawable/ic_navi_setting"
        app:showAsAction="always"/>
</menu>