<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.anima.xd.s.a170802_balancewheel.MissionDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TabLayout
            android:id="@+id/layout_tab_mission"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ic_48dp"
            app:tabMode="fixed"
            app:tabGravity="fill"
            app:tabTextColor="@color/myColorText"
            app:tabSelectedTextColor="@color/myColorAccent"
            app:tabIndicatorColor="@color/myColorAccent">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_total"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_daily"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_element"/>

        </android.support.design.widget.TabLayout>

        <RelativeLayout
            android:id="@+id/view_detail_mission"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="mini"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/_16dp"
        android:layout_marginRight="@dimen/_16dp"/>

</RelativeLayout>
